--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dom-event-stream": "0.0.1",
     "dom-value-stream": "0.0.1",
     "estate": "0.0.2",
-    "ractive": "^0.5.8"
+    "ractive": "^0.5.8",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "ractify": "^0.5.0",
