--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "practicing ractive",
   "main": "index.js",
   "scripts": {
-    "build": "browserify -t ractify > bundle.js",
+    "build": "browserify -t ractify index.js > bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
